[package]
name = "advent_of_code_2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.15.0"
itertools = "0.11.0"
lazy_static = "1.5.0"
md-5 = "0.10.5"
nalgebra = "0.33.2"
nom = "7.1.3"
rayon = "1.7.0"
regex = "1.8.4"
